# roshans-digital-brain

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  brain_console.py  brain_kernel.py  brain_server.py  production_app.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  transmit_signal.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci-generic-fixes.yml  ci.yml  publish.yml  security.yml
1_Cerebrum/: README.md
1_Cerebrum/Frontal_Lobe/: advanced_programming.txt  blockchain_and_web3.txt  blockchain_history_and_evolution.txt  programming_basics.txt  programming_history_and_evolution.txt
1_Cerebrum/Occipital_Lobe/: advanced_radiology.txt  radiology_basics.txt  radiology_history_and_evolution.txt
2_Cerebellum/: dashboard.html  ingest_knowledge.py  memory_retrieval.py
3_Brainstem/: internet_history_and_evolution.txt  networking_basics.txt
4_Limbic_System/: neuroplasticity_weights.json
4_Limbic_System/Amygdala/: security_guard.py
4_Limbic_System/Hippocampus/: core_identity.md  knowledge_index.json
5_Diencephalon/Epithalamus/Nucleus_2/Neuron_85928/: signal.txt
5_Diencephalon/Epithalamus/Nucleus_3/Neuron_85871/: signal.txt
5_Diencephalon/Epithalamus/Nucleus_4/Neuron_85874/: signal.txt
5_Diencephalon/Hypothalamus/Nucleus_3/Neuron_85870/: signal.txt
5_Diencephalon/Hypothalamus/Nucleus_3/Neuron_85930/: signal.txt
docs/: index.md
tests/: test_basic.py
(+14 files in other folders)
